--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ html {
 body {
     margin: 0;
     padding: 15px;
-    background-color: #4d4d4d;
+    background-color: #3a3a3a;
 }
 
 .container {
