--- a/css/styles.css
+++ b/css/styles.css
@@ -1,246 +1,151 @@
-
 html {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-family: monospace, sans-serif;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: monospace, sans-serif;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #494949c3;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(73, 73, 73, 0.7647058824);
 }
 
 @media (min-width: 450px) {
-    body {
-        padding: 15px;
-    }
+  body {
+    padding: 15px;
+  }
 }
-
 .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    max-width: 1200px;
-    height: auto;
-    margin: 0;
-    padding: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  max-width: 1200px;
+  height: auto;
+  margin: 0;
+  padding: 0;
 }
 
 .console-outer {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgba(56, 54, 54, 1)); /* Rust Effect */
-    border: 2px solid #3b3b3b;
-    box-shadow: 
-        2px 2px 15px rgba(0, 0, 0, 0.7),
-        inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
-    filter: sepia(20%) contrast(90%);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgb(56, 54, 54)); /* Rust Effect */
+  border: 2px solid #3b3b3b;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7), inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
+  filter: sepia(20%) contrast(90%);
 }
 
-
 .console-inner {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: 300px;
-    margin: 10px;
-    padding: 10px;
-    border: 3px solid rgb(42, 41, 41);
-    background-color: #555;
-    color: #0f0;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 5px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 300px;
+  margin: 10px;
+  padding: 10px;
+  border: 3px solid rgb(42, 41, 41);
+  background-color: #555;
+  color: #0f0;
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
 .console-screen {
-    width: auto;
-    height: 230px;
-    overflow-y: auto;
-    margin: 4px;
-    background: radial-gradient(circle, #2b2b2b, #171717);
-    border: 1px solid rgb(77, 76, 76);
-    box-shadow: inset 2px 2px 9px rgba(0, 0, 0, 0.7), 
-                2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty Glow */
-    filter: contrast(85%) brightness(90%);
+  width: auto;
+  height: 230px;
+  overflow-y: auto;
+  margin: 4px;
+  background: radial-gradient(circle, #2b2b2b, #171717);
+  border: 1px solid rgb(77, 76, 76);
+  box-shadow: inset 2px 2px 9px rgba(0, 0, 0, 0.7), 2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty Glow */
+  filter: contrast(85%) brightness(90%);
 }
 
 #projects ol {
-    display: none; 
-    padding-left: 20px;
-    color: #0f0;
-    a {
-        color: #0f0;
-    }
+  display: none;
+  padding-left: 20px;
+  color: #0f0;
+}
+#projects ol a {
+  color: #0f0;
 }
 
 ul {
-    line-height: 2rem;
-    padding: 10;
-    cursor: pointer;
+  line-height: 2rem;
+  padding: 10;
+  cursor: pointer;
 }
 
 ul li {
-    position: relative;
-    padding-right: 20px;
+  position: relative;
+  padding-right: 20px;
 }
 
 ul li:hover::after {
-    content: "<<";
-    color: #55ff55;
-    padding-left: 10px;
-    position: relative;
-    right: 0;
+  content: "<<";
+  color: #55ff55;
+  padding-left: 10px;
+  position: relative;
+  right: 0;
 }
 
 .button-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: auto;
-    height: auto;
-    padding: 4px;
-    background-color: #3b3b3b;
-    border: 2px solid rgb(77, 76, 76);
-    border-radius: 8px;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: auto;
+  height: auto;
+  padding: 4px;
+  background-color: #3b3b3b;
+  border: 2px solid rgb(77, 76, 76);
+  border-radius: 8px;
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
-
-.key {
-    display: inline-block;
-    padding: 8px 12px;
-    margin: 4px;
-    font-family: monospace;
-    font-size: 16px;
-    font-weight: bold;
-    color: #222;
-    background: linear-gradient(to bottom, #666, #444); /* Worn-out button effect */
-    border: 1px solid #2a2a2a;
-    border-radius: 5px;
-    box-shadow: 
-        2px 2px 4px rgba(0, 0, 0, 0.7),
-        inset 1px 1px 3px rgba(80, 50, 30, 0.5); /* Rusty look */
-    text-align: center;
-    min-width: 40px;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-
-.key:active {
-    background: linear-gradient(to bottom, #555, #333);
-    box-shadow: inset 2px 2px 8px rgba(0, 0, 0, 1);
-    font-size: 15px;
-}
-
-.matrix-outer {
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgba(56, 54, 54, 1)); /* Rust Effect */
-    border: 2px solid #3b3b3b;
-    box-shadow: 
-        2px 2px 15px rgba(0, 0, 0, 0.7),
-        inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
-    filter: sepia(20%) contrast(90%);
-}
-
-
-.matrix-inner {
-    display: none;
-    flex-direction: column;
-    width: auto;
-    height: 300px;
-    margin: 10px;
-    padding: 10px;
-    border: 3px solid rgb(42, 41, 41);
-    background-color: #555;
-    color: #55ff55;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 5px rgba(0, 0, 0, 0.4);
-}
-
-#canvas{
-    display: none;
-    width: 535px;
-    height: 290px;
-    overflow-y: auto;
-    margin: 4px;
-    background: radial-gradient(circle, #323131, #222222);
-    border: 1px solid rgb(77, 76, 76);
-    box-shadow: inset 2px 2px 9px rgba(0, 0, 0, 0.7), 
-                2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty Glow */
-    filter: contrast(85%) brightness(90%);
-}
-
-@media (min-width: 850px) {
-    .matrix-outer,
-    .matrix-inner,
-    #canvas {
-        display: flex;
-    }
-    .container {
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        margin: 0 auto;
-    }
-}
-
-
 
 .monitor-outer {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 1200px;
-    max-height: 90vh;
-    height: 100vh;
-    margin: 0 auto;
-    background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgba(56, 54, 54, 1)); /* Rust Effect */
-    border: 2px solid #3b3b3b;
-    box-shadow: 
-        2px 2px 15px rgba(0, 0, 0, 0.7),
-        inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
-    filter: sepia(20%) contrast(90%);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1200px;
+  max-height: 90vh;
+  height: 100vh;
+  margin: 0 auto;
+  background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgb(56, 54, 54)); /* Rust Effect */
+  border: 2px solid #3b3b3b;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7), inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
+  filter: sepia(20%) contrast(90%);
 }
-
 
 .monitor-inner {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: 100%;
-    margin: 10px;
-    padding: 10px;
-    border: 3px solid rgb(42, 41, 41);
-    background: radial-gradient(circle, #666, #444); /* Worn metal effect */
-    color: #55ff55;
-    box-shadow: 
-        inset 2px 2px 5px rgba(0, 0, 0, 0.4),
-        2px 2px 4px rgba(80, 50, 30, 0.5); /* Rust on edges */
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100%;
+  margin: 10px;
+  padding: 10px;
+  border: 3px solid rgb(42, 41, 41);
+  background: radial-gradient(circle, #666, #444); /* Worn metal effect */
+  color: #55ff55;
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 4px rgba(80, 50, 30, 0.5); /* Rust on edges */
 }
 
-
 .monitor-screen {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: 100%;
-    overflow-y: auto;
-    margin: 4px;
-    background: radial-gradient(circle, #2a2a2a, #111); /* Dark screen */
-    border: 2px solid rgb(77, 76, 76);
-    box-shadow: 
-        inset 2px 2px 9px rgba(0, 0, 0, 0.7),
-        2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty glow */
-    filter: contrast(85%) brightness(90%) sepia(10%);
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100%;
+  overflow-y: auto;
+  margin: 4px;
+  background: radial-gradient(circle, #2a2a2a, #111); /* Dark screen */
+  border: 2px solid rgb(77, 76, 76);
+  box-shadow: inset 2px 2px 9px rgba(0, 0, 0, 0.7), 2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty glow */
+  filter: contrast(85%) brightness(90%) sepia(10%);
 }
 
 .monitor-screen iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-    border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
 }
 
 /* #waiting-text {
@@ -260,180 +165,239 @@ ul li:hover::after {
     0% { opacity: 1; }
     100% { opacity: 0; }
 } */
-
-
 .screw-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px;
-    margin: 0;
-    max-width: 1200px;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  margin: 0;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .screw {
-    width: 20px;
-    height: 20px;
-    margin: 5px;
-    border: 1px solid #2d2d2d;
-    border-radius: 50%;
-    background: radial-gradient(circle, #4d2f1a, #222); /* Rusty effect */
-    box-shadow: 
-        inset 2px 2px 5px rgba(0, 0, 0, 0.7), 
-        2px 2px 5px rgba(80, 50, 30, 0.5), 
-        inset -2px -2px 5px rgba(255, 255, 255, 0.1); 
-    position: relative;
-    filter: contrast(90%) sepia(30%);
+  width: 20px;
+  height: 20px;
+  margin: 5px;
+  border: 1px solid #2d2d2d;
+  border-radius: 50%;
+  background: radial-gradient(circle, #4d2f1a, #222); /* Rusty effect */
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.7), 2px 2px 5px rgba(80, 50, 30, 0.5), inset -2px -2px 5px rgba(255, 255, 255, 0.1);
+  position: relative;
+  filter: contrast(90%) sepia(30%);
 }
 
 /* Slot line */
 .screw::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    width: 80%;
-    height: 2px;
-    background: linear-gradient(to bottom, #111, #333); 
-    box-shadow: 
-        inset -1px -1px 2px rgba(255, 255, 255, 0.3),
-        inset 1px 1px 2px rgba(0, 0, 0, 0.6); 
-    transform: translateY(-50%);
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  width: 80%;
+  height: 2px;
+  background: linear-gradient(to bottom, #111, #333);
+  box-shadow: inset -1px -1px 2px rgba(255, 255, 255, 0.3), inset 1px 1px 2px rgba(0, 0, 0, 0.6);
+  transform: translateY(-50%);
 }
 
 /* shine */
 .screw::after {
-    content: "";
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 6px;
-    height: 6px;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
-    filter: blur(1px);
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 6px;
+  height: 6px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  filter: blur(1px);
 }
 
-
 .card-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(auto, 1fr);
-    gap: 10px;
-    padding: 5px;
-    margin: 0;
-    max-width: 1200px;
-    margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto, 1fr);
+  gap: 10px;
+  padding: 5px;
+  margin: 0;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 @media (min-width: 768px) {
-    .card-grid {
-        grid-template-columns: 1fr 1fr;
-    }
+  .card-grid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
-
 .card {
-    display: inline-block;
-    border: 2px solid #0f0;
-    color: #0f0
+  display: inline-block;
+  border: 2px solid #0f0;
+  color: #0f0;
 }
 
 img {
-    max-width: 300px;
-    width: 100%;
-    height: auto;
-    border: 2px dashed #0f0;
-    border-radius: 4px;
-    padding: 2px;
+  max-width: 300px;
+  width: 100%;
+  height: auto;
+  border: 2px dashed #0f0;
+  border-radius: 4px;
+  padding: 2px;
 }
 
 h3, p, a, h1, h2 {
-    color: #0f0;
+  color: #0f0;
 }
 
 /*--- form---*/
-
-
-
 .contact-form {
-    max-width: 400px;
-    margin: 0 auto;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 @media (min-width: 768px) {
-    .contact-form {
-        margin: 20px auto;
-    }
+  .contact-form {
+    margin: 20px auto;
+  }
 }
-
 .form-row {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-group {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-input[type="text"],
-input[type="email"],
+input[type=text],
+input[type=email],
 textarea {
-    font-family: 'Courier New', Courier, monospace;
-    padding: 8px;
-    border: 1px solid #0f0;
-    border-radius: 4px;
-    background-color: #4e4e4e;
-    color: #0f0;
-    margin-top: 4px;
-    width: 100%;
-    box-sizing: border-box;
+  font-family: "Courier New", Courier, monospace;
+  padding: 8px;
+  border: 1px solid #0f0;
+  border-radius: 4px;
+  background-color: #4e4e4e;
+  color: #0f0;
+  margin-top: 4px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 input::placeholder {
-    color: #0f0;
+  color: #0f0;
 }
 
 textarea {
-    resize: none;
+  resize: none;
 }
 
 textarea::placeholder {
-    color: #0f0;
+  color: #0f0;
 }
 
-button[type="submit"] {
-    background-color: #4e4e4e;
-    color: #0f0;
-    border: 1px solid #0f0;
-    border-radius: 18px;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
-    text-transform: uppercase;
+button[type=submit] {
+  background-color: #4e4e4e;
+  color: #0f0;
+  border: 1px solid #0f0;
+  border-radius: 18px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  text-transform: uppercase;
 }
 
-button[type="submit"]:hover {
-    background-color: #0f0;
-    color: #4e4e4e;
+button[type=submit]:hover {
+  background-color: #0f0;
+  color: #4e4e4e;
 }
 
 .contact-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    max-width: 1120px;
-    width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  max-width: 1120px;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
-    .contact-container {
-        grid-template-columns: 1fr 1fr;
-    }
+  .contact-container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
+.key {
+  display: inline-block;
+  padding: 8px 12px;
+  margin: 4px;
+  font-family: monospace;
+  font-size: 16px;
+  font-weight: bold;
+  color: #222;
+  background: linear-gradient(to bottom, #666, #444); /* Worn-out button effect */
+  border: 1px solid #2a2a2a;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), inset 1px 1px 3px rgba(80, 50, 30, 0.5); /* Rusty look */
+  text-align: center;
+  min-width: 40px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.key:active {
+  background: linear-gradient(to bottom, #555, #333);
+  box-shadow: inset 2px 2px 8px rgb(0, 0, 0);
+  font-size: 15px;
+}
+
+.matrix-outer {
+  display: none;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgb(56, 54, 54)); /* Rust Effect */
+  border: 2px solid #3b3b3b;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7), inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
+  filter: sepia(20%) contrast(90%);
+}
+
+.matrix-inner {
+  display: none;
+  flex-direction: column;
+  width: auto;
+  height: 300px;
+  margin: 10px;
+  padding: 10px;
+  border: 3px solid rgb(42, 41, 41);
+  background-color: #555;
+  color: #55ff55;
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+#canvas {
+  display: none;
+  width: 535px;
+  height: 290px;
+  overflow-y: auto;
+  margin: 4px;
+  background: radial-gradient(circle, #323131, #222222);
+  border: 1px solid rgb(77, 76, 76);
+  box-shadow: inset 2px 2px 9px rgba(0, 0, 0, 0.7), 2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty Glow */
+  filter: contrast(85%) brightness(90%);
+}
+
+@media (min-width: 850px) {
+  .matrix-outer,
+  .matrix-inner,
+  #canvas {
+    display: flex;
+  }
+  .container {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin: 0 auto;
+  }
+}/*# sourceMappingURL=styles.css.map */
