--- a/css/styles.css
+++ b/css/styles.css
@@ -148,23 +148,6 @@ ul li:hover::after {
   border-radius: 8px;
 }
 
-/* #waiting-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 20px;
-    font-family: monospace;
-    color: #0f0;
-    text-align: center;
-    white-space: nowrap;
-    animation: flash 1s infinite alternate;
-}
-
-@keyframes flash {
-    0% { opacity: 1; }
-    100% { opacity: 0; }
-} */
 .screw-container {
   display: flex;
   flex-direction: row;
@@ -329,6 +312,53 @@ button[type=submit]:hover {
     grid-template-columns: 1fr 1fr;
   }
 }
+.monitor-outer2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+  height: 100%;
+  margin: 0 auto;
+  background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgb(56, 54, 54)); /* Rust Effect */
+  border: 2px solid #3b3b3b;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7), inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
+  filter: sepia(20%) contrast(90%);
+}
+
+.monitor-inner2 {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100%;
+  margin: 10px;
+  padding: 10px;
+  border: 3px solid rgb(42, 41, 41);
+  background: radial-gradient(circle, #666, #444); /* Worn metal effect */
+  color: #55ff55;
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 4px rgba(80, 50, 30, 0.5); /* Rust on edges */
+}
+
+.monitor-screen2 {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100%;
+  overflow-y: auto;
+  margin: 4px;
+  background: radial-gradient(circle, #2a2a2a, #111); /* Dark screen */
+  border: 2px solid rgb(77, 76, 76);
+  box-shadow: inset 2px 2px 9px rgba(0, 0, 0, 0.7), 2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty glow */
+  filter: contrast(85%) brightness(90%) sepia(10%);
+}
+
+.monitor-screen2 iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
+}
+
 .key {
   display: inline-block;
   padding: 8px 12px;
