--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body {
   display: flex;
   flex-direction: column;
   width: auto;
-  height: 300px;
+  height: 320px;
   margin: 10px;
   padding: 10px;
   border: 3px solid rgb(42, 41, 41);
@@ -82,7 +82,7 @@ ul li {
 }
 
 ul li:hover::after {
-  content: "<<";
+  content: "<=";
   color: #55ff55;
   padding-left: 10px;
   position: relative;
@@ -429,5 +429,24 @@ button[type=submit]:hover {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     margin: 0 auto;
+  }
+}
+.cog {
+  position: absolute;
+  display: flex;
+  z-index: -1;
+  top: 500px;
+  left: 500px;
+  width: 300px;
+  height: 300px;
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }/*# sourceMappingURL=styles.css.map */
