--- a/sass/_console.scss
+++ b/sass/_console.scss
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     width: auto;
-    height: 300px;
+    height: 320px;
     margin: 10px;
     padding: 10px;
     border: 3px solid rgb(42, 41, 41);
@@ -69,11 +69,11 @@ ul li {
 }
 
 ul li:hover::after {
-    content: "<<";
+    content: "<=";
     color: #55ff55;
     padding-left: 10px;
     position: relative;
-    right: 0;
+    right: 0; 
 }
 
 .button-container {
