--- a/css/styles.css
+++ b/css/styles.css
@@ -432,21 +432,21 @@ button[type=submit]:hover {
   }
 }
 .cog {
-  position: absolute;
-  display: flex;
-  z-index: -1;
-  top: 500px;
-  left: 500px;
   width: 300px;
   height: 300px;
-  animation: rotate 2s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.5s ease;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cog:hover {
+  transform: translate(-50%, -50%) rotate(180deg);
+  cursor: pointer;
+}
+
+.cog img {
+  width: 100%;
+  border: none;
 }/*# sourceMappingURL=styles.css.map */
