--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,3 +16,9 @@ body {
         padding: 15px;
     }
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
