--- a/sass/_console.scss
+++ b/sass/_console.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 400px;
     max-width: 1200px;
     margin: 0 auto;
     background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgba(56, 54, 54, 1)); /* Rust Effect */
