--- a/sass/_matrix.scss
+++ b/sass/_matrix.scss
@@ -43,7 +43,7 @@
     display: none;
     flex-direction: column;
     width: auto;
-    height: 300px;
+    height: 320px;
     margin: 10px;
     padding: 10px;
     border: 3px solid rgb(42, 41, 41);
@@ -52,7 +52,7 @@
     box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
-#canvas{
+canvas{
     display: none;
     width: 535px;
     height: 290px;
