--- a/sass/_matrix.scss
+++ b/sass/_matrix.scss
@@ -55,7 +55,7 @@
 canvas{
     display: none;
     width: 535px;
-    height: 290px;
+    height: auto;
     overflow-y: auto;
     margin: 4px;
     background: radial-gradient(circle, #323131, #222222);
