--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ footer {
 
 ul {
   line-height: 2rem;
-  padding: 10;
+  padding: 4px;
   cursor: pointer;
 }
 
@@ -395,6 +395,7 @@ button[type=submit]:hover {
   flex-direction: column;
   width: 100%;
   max-width: 1200px;
+  height: 400px;
   margin: 0 auto;
   background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgb(56, 54, 54)); /* Rust Effect */
   border: 2px solid #3b3b3b;
@@ -418,7 +419,8 @@ button[type=submit]:hover {
 canvas {
   display: none;
   width: 535px;
-  height: auto;
+  max-height: 290px;
+  height: 100%;
   overflow-y: auto;
   margin: 4px;
   background: radial-gradient(circle, #323131, #222222);
