--- a/sass/_monitor.scss
+++ b/sass/_monitor.scss
@@ -232,6 +232,28 @@ button[type="submit"]:hover {
 
 
 //--------------------------------------
+
+.welcome {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    h1 {
+        font-size: 3rem;
+        font-weight: bold;
+        text-align: center;
+    }
+    h2 {
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-align: center;
+    }
+    h3 {
+        font-size: 1rem;
+        text-align: center;
+    }
+}
+
 //--------------------------------------
 //--------------------------------------
 
