--- a/css/styles.css
+++ b/css/styles.css
@@ -227,8 +227,7 @@ ul li:hover::after {
   border: 2px solid #0f0;
   color: #0f0;
 }
-
-img {
+.card img {
   max-width: 300px;
   width: 100%;
   height: auto;
@@ -342,54 +341,36 @@ button[type=submit]:hover {
   text-align: center;
 }
 
-.monitor-outer2 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 100vw;
-  max-height: 100vh;
-  height: 100%;
-  margin: 0 auto;
-  background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgb(56, 54, 54)); /* Rust Effect */
-  border: 2px solid #3b3b3b;
-  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7), inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
-  filter: sepia(20%) contrast(90%);
+.cog1 {
+  animation: spin 10s linear infinite;
+  width: 400px;
+  height: 400px;
+  filter: sepia(70%);
 }
 
-.monitor-inner2 {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  height: 100%;
-  margin: 10px;
-  padding: 10px;
-  border: 3px solid rgb(42, 41, 41);
-  background: radial-gradient(circle, #666, #444); /* Worn metal effect */
-  color: #55ff55;
-  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4), 2px 2px 4px rgba(80, 50, 30, 0.5); /* Rust on edges */
+.cog2 {
+  animation: spin-reverse 16s linear infinite;
+  width: 300px;
+  height: 300px;
+  filter: sepia(70%);
 }
 
-.monitor-screen2 {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  height: 100%;
-  overflow-y: auto;
-  margin: 4px;
-  background: radial-gradient(circle, #2a2a2a, #111); /* Dark screen */
-  border: 2px solid rgb(77, 76, 76);
-  border-radius: 8px;
-  box-shadow: inset 2px 2px 9px rgba(0, 0, 0, 0.7), 2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty glow */
-  filter: contrast(85%) brightness(90%) sepia(10%);
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-
-.monitor-screen2 iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-  border-radius: 8px;
+@keyframes spin-reverse {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
-
 .key {
   display: inline-block;
   padding: 8px 12px;
@@ -463,23 +444,4 @@ canvas {
     gap: 20px;
     margin: 0 auto;
   }
-}
-.cog {
-  width: 300px;
-  height: 300px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.5s ease;
-}
-
-.cog:hover {
-  transform: translate(-50%, -50%) rotate(180deg);
-  cursor: pointer;
-}
-
-.cog img {
-  width: 100%;
-  border: none;
 }/*# sourceMappingURL=styles.css.map */
