--- a/sass/_monitor.scss
+++ b/sass/_monitor.scss
@@ -129,16 +129,15 @@
 .card {
     display: inline-block;
     border: 2px solid #0f0;
-    color: #0f0
-}
-
-img {
-    max-width: 300px;
-    width: 100%;
-    height: auto;
-    border: 2px dashed #0f0;
-    border-radius: 4px;
-    padding: 2px;
+    color: #0f0;
+    img {
+        max-width: 300px;
+        width: 100%;
+        height: auto;
+        border: 2px dashed #0f0;
+        border-radius: 4px;
+        padding: 2px;
+    }
 }
 
 h3, p, a, h1, h2 {
@@ -231,7 +230,7 @@ button[type="submit"]:hover {
 }
 
 
-//--------------------------------------
+//--------------welcome-------------------
 
 .welcome {
     display: flex;
@@ -254,62 +253,39 @@ button[type="submit"]:hover {
     }
 }
 
+//-------------cogs---------------------
+
+.cog1 {
+    animation: spin 10s linear infinite;
+    width: 400px;
+    height: 400px;
+    filter: sepia(70%);
+}
+
+.cog2 {
+    animation: spin-reverse 16s linear infinite;
+    width: 300px;
+    height: 300px;
+    filter: sepia(70%);
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+
+    }
+}
+
+@keyframes spin-reverse {
+    from {
+        transform: rotate(360deg);
+    }
+    to {
+        transform: rotate(0deg);
+    }
+}
+
 //--------------------------------------
-//--------------------------------------
-
-
-.monitor-outer2 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 100vw;
-    max-height: 100vh;
-    height: 100%;
-    margin: 0 auto;
-    background: radial-gradient(circle, rgba(80, 50, 30, 0.3), rgba(56, 54, 54, 1)); /* Rust Effect */
-    border: 2px solid #3b3b3b;
-    box-shadow: 
-        2px 2px 15px rgba(0, 0, 0, 0.7),
-        inset 3px 3px 8px rgba(80, 50, 30, 0.5); /* Inner Rust Effect */
-    filter: sepia(20%) contrast(90%);
-}
-
-
-.monitor-inner2 {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: 100%;
-    margin: 10px;
-    padding: 10px;
-    border: 3px solid rgb(42, 41, 41);
-    background: radial-gradient(circle, #666, #444); /* Worn metal effect */
-    color: #55ff55;
-    box-shadow: 
-        inset 2px 2px 5px rgba(0, 0, 0, 0.4),
-        2px 2px 4px rgba(80, 50, 30, 0.5); /* Rust on edges */
-}
-
-
-.monitor-screen2 {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: 100%;
-    overflow-y: auto;
-    margin: 4px;
-    background: radial-gradient(circle, #2a2a2a, #111); /* Dark screen */
-    border: 2px solid rgb(77, 76, 76);
-    border-radius: 8px;
-    box-shadow: 
-        inset 2px 2px 9px rgba(0, 0, 0, 0.7),
-        2px 2px 4px rgba(80, 50, 30, 0.4); /* Rusty glow */
-    filter: contrast(85%) brightness(90%) sepia(10%);
-}
-
-.monitor-screen2 iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-    border-radius: 8px;
-}
